# rdc

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: desktop-release.yml  release.yaml
desktop/: .gitignore  Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: gen-icon.py  icon.icns
desktop/src/: auth.rs  commands.rs  connection.rs  discover.rs  folder.rs  lib.rs  main.rs  paths.rs  registry.rs  state.rs  sync.rs  sync_queue.rs  url_normalize.rs
desktop/src/keychain/: fake.rs  macos.rs  mod.rs
desktop/tests/: add_connection_validation.rs  rdc_toml.rs  settings_roundtrip.rs  slug.rs  sync_queue.rs  url_normalize.rs
desktop/ui/: index.html  main.ts  package.json  tsconfig.json  vite.config.ts
desktop/ui/src/: App.tsx  api.ts  styles.css  types.ts  window.ts
desktop/ui/src/components/: AddConnectionSheet.tsx  Button.tsx  ContextMenu.tsx  Detail.tsx  EditCredentialsSheet.tsx  EmptyState.tsx  Field.tsx  IconButton.tsx  Modal.tsx  RemoveConfirmSheet.tsx  Sidebar.tsx
docs/superpowers/notes/: 2026-06-07-live-verification-stage1.md
docs/superpowers/plans/: 2026-05-06-rdc-m1-walking-skeleton.md  2026-05-06-rdc-m2-foundations-and-orgs-workspaces.md  2026-05-06-rdc-m3-workspace-tree.md  2026-05-06-rdc-m4-org-level-objects.md  2026-05-07-pull-push-ux-hardening.md  2026-05-07-rdc-m10-push-hooks.md  2026-05-07-rdc-m11-overlays-push.md  2026-05-07-rdc-m12-mapping-plan-apply.md  2026-05-07-rdc-m13-push-rules-labels.md  2026-05-07-rdc-m14-distribution.md  2026-05-07-rdc-m5-workflows-and-email-templates.md  2026-05-07-rdc-m6-mdh.md  2026-05-07-rdc-m7-three-way-pull-conflicts.md  2026-05-07-rdc-m8-nested-three-way-and-indexer.md  2026-05-07-rdc-m9-schema-combined-hash.md  2026-05-13-store-extensions.md  2026-05-14-unified-sync.md  2026-05-14-watch-mode.md  2026-05-15-progress-log.md  2026-05-20-sync-grid-visualization.md  2026-05-21-traditional-log.md  2026-05-22-store-extension-anomaly-fix.md  2026-05-25-gitlab-ci-archival-sync.md  2026-05-26-rossum-local-desktop.md  2026-05-27-diff-raw-flag.md  2026-06-01-kind-codec.md  2026-06-03-identity-keying.md  2026-06-05-portable-refs-stage1.md  2026-06-06-portable-refs-stage1b-central-hashing.md  2026-06-07-migrate-remove-deploy.md
docs/superpowers/specs/: 2026-05-06-rdc-design.md  2026-05-07-pull-push-progress-bar-design.md  2026-05-13-store-extensions-design.md  2026-05-14-selective-deployment-design.md  2026-05-14-unified-sync-design.md  2026-05-14-watch-mode-design.md  2026-05-15-progress-log-design.md  2026-05-20-sync-grid-visualization-design.md  2026-05-21-traditional-log-design.md  2026-05-25-gitlab-ci-archival-sync-design.md  2026-05-26-rossum-local-desktop-design.md  2026-05-27-diff-raw-flag-design.md  2026-06-01-kind-codec-design.md  2026-06-05-portable-snapshots-migrate-sync-design.md  2026-06-10-sync-auto-remote-delete-design.md
homebrew/: rdc.rb
proptest-regressions/cli/: resolve.txt
rossum-local/: .gitignore  Cargo.toml  tauri.conf.json
rossum-local/capabilities/: default.json
rossum-local/icons/: icon.icns
rossum-local/src/: auth.rs  commands.rs  diagnostics.rs  folder.rs  lib.rs  main.rs  rdc_toml.rs  registry.rs  settings.rs  slug.rs  state.rs  sync.rs  sync_queue.rs
rossum-local/src/keychain/: macos.rs  mod.rs
rossum-local/tests/: add_connection_validation.rs  auth_resolve.rs  keychain_fake.rs  registry_roundtrip.rs  settings_roundtrip.rs  sync_command.rs  sync_happy_path.rs  sync_queue.rs
rossum-local/ui/: index.html  main.ts  package.json  styles.css  tsconfig.json
src/: lib.rs  log.rs  main.rs  mapping.rs  overlay.rs  paths.rs  progress.rs  secrets.rs  slug.rs  upgrade.rs
src/api/: data_storage.rs  error.rs  mod.rs  rate_limit.rs  retry.rs
src/cli/: auth.rs  diff.rs  env_picker.rs  index.rs  init.rs  mod.rs  pull.rs  repair.rs  resolve.rs  status.rs  stdin_coord.rs
src/cli/deploy/: apply.rs  common.rs  create.rs  hook_secrets.rs  map.rs  mdh.rs  mod.rs  plan.rs  realign.rs  run.rs  selection.rs  store_extensions.rs
src/cli/doctor/: canonicalize_keys.rs  mod.rs  rebuild_lock.rs  rename_slugs.rs  store_anomaly.rs
src/cli/migrate/: mod.rs
src/cli/pull/: common.rs  email_templates.rs  engine_fields.rs  engines.rs  hooks.rs  labels.rs  mdh.rs  mod.rs  organization.rs  portabilize.rs  queues.rs  rules.rs  workflow_steps.rs  workflows.rs  workspaces.rs
src/cli/push/: deletes.rs  email_templates.rs  engine_fields.rs  engines.rs  hooks.rs  inboxes.rs  labels.rs  mdh.rs  mod.rs  queues.rs  rules.rs  scan.rs  schemas.rs  workspaces.rs
src/cli/repair/: mod.rs  rebuild_lock.rs  rename_slugs.rs  store_anomaly.rs
src/config/: mod.rs
src/merge/: json3.rs  mod.rs  sidecar.rs
src/model/: collection.rs  email_template.rs  engine.rs  engine_field.rs  hook.rs  hook_template.rs  inbox.rs  index_set.rs  label.rs  mod.rs  organization.rs  queue.rs  rule.rs  schema.rs  user.rs  workflow.rs  workflow_step.rs  workspace.rs
src/progress/: grid.rs  log.rs  mod.rs
src/snapshot/: collection.rs  create.rs  email_template.rs  engine.rs  engine_field.rs  hook.rs  inbox.rs  index_set.rs  key_order.rs  label.rs  mod.rs  noise.rs  organization.rs  queue.rs  refs.rs  rule.rs  schema.rs  workflow.rs  workflow_step.rs  workspace.rs  writer.rs
src/state/: base_cache.rs  lockfile.rs  mod.rs
templates/: gitlab-ci-archival.yml
testdata/fixtures/: email_templates_list.json  engine_fields_list.json  engines_list.json  hook_1.json  hook_2.json  hooks_list.json  inbox_1.json  labels_list.json  mdh_collections.json  mdh_indexes_purchase_orders.json  mdh_indexes_vendors.json  mdh_search_indexes_purchase_orders.json  mdh_search_indexes_vendors.json  organization.json  queues_list.json  rules_list.json  schema_1.json  schema_2.json  schema_3.json  workflow_steps_list.json  workflows_list.json  workspaces_list.json
tests/: api.rs  api_hooks.rs  cli_auth.rs  cli_deploy.rs  cli_diff.rs  cli_doctor.rs  cli_init.rs  cli_migrate.rs  cli_misc.rs  cli_pull.rs  cli_push.rs  cli_repair.rs  cli_status.rs  cli_sync.rs  cli_version.rs  codec_invariant.rs  embed_sync.rs
(+23 files in other folders)
