[package]
name = "rdc"
version = "0.1.0"
edition = "2024"
description = "Rossum Deployment as Code — CLI for snapshotting and deploying Rossum.ai configurations"
license = "Apache-2.0"

[[bin]]
name = "rdc"
path = "src/main.rs"

[lib]
name = "rdc"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
fs4 = "1"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
indicatif = "0.18"
inquire = { version = "0.9", default-features = false, features = ["crossterm"] }
notify = "8"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
similar = "3"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "1"

[dev-dependencies]
assert_cmd = "2"
http = "1"
predicates = "3"
pretty_assertions = "1"
proptest = "1"
regex = "1"
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
