[package]
name = "rdc"
version = "0.1.0"
edition = "2024"
description = "Rossum Deployment as Code — CLI for snapshotting and deploying Rossum.ai configurations"
license = "WTFPL"

[[bin]]
name = "rdc"
path = "src/main.rs"

[lib]
name = "rdc"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
fs4 = "1"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
indexmap = { version = "2", features = ["serde"] }
inquire = { version = "0.9", default-features = false, features = ["crossterm"] }
notify = "8"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = { version = "0.11", default-features = false, features = ["alloc"] }
similar = "3"
tar = { version = "0.4", default-features = false }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "1"

[dev-dependencies]
assert_cmd = "2"
http = "1"
predicates = "3"
pretty_assertions = "1"
proptest = "1"
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = "s"
