[package]
name = "rossum-local"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Pull Rossum organizations locally for Claude consumption"

[lints]
workspace = true

[lib]
name = "rossum_local"
path = "src/lib.rs"

[[bin]]
name = "rossum-local"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rdc = { path = ".." }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
directories = "5"
toml = "1"

[dev-dependencies]
tempfile = "3"
