[package]
name = "rossum-local"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Pull Rossum organizations locally for Claude consumption"

[lib]
name = "rossum_local"
path = "src/lib.rs"

[[bin]]
name = "rossum-local"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rdc = { path = ".." }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "parking_lot"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
ulid = { version = "1", features = ["serde"] }
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
